@@ -5,14 +5,13 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import com.fasterxml.jackson.datatype.jsr310.deser.LocalDateDeserializer;
+import org.w3c.dom.ls.LSOutput;
 
 import java.io.File;
 import java.io.IOException;
 import java.time.LocalDate;
 import java.time.Month;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Scanner;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class Main {
@@ -50,6 +49,7 @@ public class Main {
         int opt;
         Scanner scanner = new Scanner(System.in);
         do {
+            System.out.println("\nCerinta: ");
             opt = scanner.nextInt();
             switch(opt) {
                 case 1:
@@ -58,31 +58,32 @@ public class Main {
                 case 2:
                     lista
                             .stream()
-                            .filter(a->a.getSalariu() > 2500).forEach(System.out::println);
+                            .filter(a->a.getSalariu() > 2500)
+                            .forEach(System.out::println);
                     break;
                 case 3:
                     List<Angajat>angajati_aprilie = lista
                             .stream()
                             .filter(a->a.getData_angajarii().getMonth().equals(Month.APRIL) &&
                                     a.getData_angajarii().getYear() == LocalDate.now().getYear()-1 &&
-                                    (a.getPost().equals("sef") || a.getPost().equals("director")))
+                                    (a.getPost().contains("sef") || a.getPost().contains("director")))
                             .collect(Collectors.toList());
 
                     angajati_aprilie.forEach(System.out::println);
                     break;
                 case 4:
-                       lista
+                    lista
                             .stream()
                             .filter(a->!(a.getPost().equals("sef") || a.getPost().equals("director")))
-                               .sorted((a, b)-> Float.compare(b.getSalariu(), a.getSalariu()))
-                               .forEach(System.out::println);
+                            .sorted((a, b)-> Float.compare(b.getSalariu(), a.getSalariu()))
+                            .forEach(System.out::println);
                     break;
                 case 5:
-                    List<String>angajati = lista
+                    var angajati = lista
                             .stream()
                             .map(Angajat::getNume)
                             .map(String::toUpperCase)
-                            .collect(Collectors.toList());
+                            .toList();
                     System.out.println(angajati);
                     break;
                 case 6:
@@ -93,12 +94,39 @@ public class Main {
                             .forEach(System.out::println);
                     break;
                 case 7:
+                    Optional<Angajat>primulAngajat = lista
+                        .stream()
+                        .min((a, b)->a.getData_angajarii().compareTo(b.getData_angajarii()));
+                    if(primulAngajat.isPresent())
+                        System.out.println(primulAngajat.get());
+                    else
+                        System.out.println("Nu exista angajati");
                     break;
                 case 8:
+                    var dateSalarii = lista
+                            .stream()
+                            .map(Angajat::getSalariu)
+                            .collect(Collectors.summarizingDouble(a->a));
+                    System.out.println(dateSalarii.getMin() + " " + dateSalarii.getAverage() + " " + dateSalarii.getMax());
                     break;
                 case 9:
+                    lista
+                            .stream()
+                            .map(Angajat::getNume)
+                            .filter(a->a.equalsIgnoreCase("ion"))
+                            .findAny()
+                            .ifPresentOrElse(a->System.out.println("Firma are Ioni"), ()-> System.out.println("Firma nu are niciun Ion"));
                     break;
                 case 10:
+                    long nrAngajati = lista
+                            .stream()
+                            .map(Angajat::getData_angajarii)
+                            .filter(a->a.getMonth().equals(Month.JUNE) ||
+                                    a.getMonth().equals(Month.JULY) ||
+                                    a.getMonth().equals(Month.AUGUST))
+                            .filter(a->a.getYear() == LocalDate.now().getYear() - 1)
+                            .count();
+                    System.out.println(nrAngajati + " angajati noi vara trecuta");
                     break;
                 default:
                     break;
